--- a/src/app/player/player-profile/player-profile.component.scss
+++ b/src/app/player/player-profile/player-profile.component.scss
@@ -8,9 +8,11 @@
   .card-title {
     display: flex;
     align-items: center;
-    .button {
-      margin-left: 0.5rem;
-      cursor: pointer;
+    > .flag {
+      margin-right: 0.25rem;
+    }
+    > h3 {
+      margin-right: 1rem;
     }
   }
 }
