--- a/src/styles/_icon.scss
+++ b/src/styles/_icon.scss
@@ -17,6 +17,17 @@
   @include icon($accent-type);
   @include icon($danger-type);
   fill: currentColor;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
   &.small {
     font-size: 18px;
     line-height: 18px;
