--- a/src/app/shared/components/form/form-field.component.html
+++ b/src/app/shared/components/form/form-field.component.html
@@ -9,7 +9,7 @@
   [ngClass]="{
     'has-prefix': !!prefixDirective,
     'has-suffix': !!sufixDirective,
-    disabled: controlDirective?.isDisabled,
+    disabled: control?.disabled,
     'is-select': !!selectComponent
   }"
 >
@@ -25,7 +25,7 @@
   </div>
 </div>
 <div class="bottom-wrapper">
-  <div class="hints" *ngIf="controlDirective?.isTouched || !(controlDirective?.control?.hasErrors$ | async)" @fadeIn>
+  <div class="hints" *ngIf="control?.touched || !(control?.hasErrors$ | async)" @fadeIn>
     <ng-content select="hint:not([end]),[hint]:not([end])"></ng-content>
     <div class="hint-spacer"></div>
     <ng-content select="hint[end],[hint][end]"></ng-content>
