--- a/src/app/shared/components/spinner/loading/loading.component.scss
+++ b/src/app/shared/components/spinner/loading/loading.component.scss
@@ -1,7 +1,8 @@
 @use 'variables' as v;
+@use 'functions' as f;
 
 .bio-loading.bio-loading-backdrop {
-  z-index: 2000;
+  z-index: f.get-z-index(loading);
   display: flex;
   align-items: center;
   justify-content: center;
