--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,12 @@
+@use 'variables' as v;
+@use 'functions' as f;
+
 header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  z-index: 999;
+  z-index: f.get-z-index(header);
 }
 
 main {
