--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,14 +1,14 @@
-@import 'variables';
-@import 'mixins';
+@use 'variables' as v;
+@use 'mixins' as m;
 
 .menu {
   min-width: 150px;
-  background-color: $dark-overlay;
-  border-radius: $radius;
+  background-color: v.$dark-overlay;
+  border-radius: v.$radius;
   padding: 0.5rem 0;
   display: flex;
   flex-direction: column;
-  @include elevation(3);
+  @include m.elevation(3);
   .menu-item {
     width: 100%;
     border-radius: 0;
@@ -16,11 +16,11 @@
     &.button:not(.disabled) {
       &:focus {
         box-shadow: none;
-        background-color: transparentize($white, 0.9);
+        background-color: transparentize(v.$white, 0.9);
         &.primary,
         &.accent,
         &.danger {
-          background-color: transparentize($white, 0.9);
+          background-color: transparentize(v.$white, 0.9);
           box-shadow: none;
         }
       }
