--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -1,10 +1,10 @@
-@import 'variables';
-@import 'mixins';
+@use 'variables' as v;
+@use 'mixins' as m;
 
 .modal {
   padding: 1rem;
-  background-color: $dark-overlay;
-  border-radius: $radius;
+  background-color: v.$dark-overlay;
+  border-radius: v.$radius;
   width: 100%;
   height: 100%;
   min-height: inherit;
@@ -12,7 +12,7 @@
   overflow: auto;
   box-sizing: border-box;
   position: relative;
-  @include elevation(5);
+  @include m.elevation(5);
   .modal-title {
     font-weight: 500;
     margin-bottom: 1rem;
@@ -25,6 +25,6 @@
     padding: 0 1rem;
   }
   .modal-actions {
-    @include actions();
+    @include m.actions();
   }
 }
