--- a/src/styles/_functions.scss
+++ b/src/styles/_functions.scss
@@ -1,15 +1,19 @@
-@import 'variables';
+@use 'variables' as v;
 
-@function get-color($type: $primary-type, $level: 0) {
-  @if $type == $primary-type {
-    @return map-get($primary-pallete, $level);
-  } @else if $type == $accent-type {
-    @return map-get($accent-pallete, $level);
-  } @else if $type == $danger-type {
-    @return map-get($danger-pallete, $level);
+@function get-color($type: v.$primary-type, $level: 0) {
+  @if $type == v.$primary-type {
+    @return map-get(v.$primary-pallete, $level);
+  } @else if $type == v.$accent-type {
+    @return map-get(v.$accent-pallete, $level);
+  } @else if $type == v.$danger-type {
+    @return map-get(v.$danger-pallete, $level);
   }
 }
 
 @function get-disabled-color($color) {
   @return lighten($color, 20);
+}
+
+@function get-z-index($name) {
+  @return map-get(v.$z-index, $name);
 }
