- added required asterisk to form-field - fixed z-index of overlays - fixed loading in the bio-table

--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -20,6 +20,7 @@
       *ngIf="!first || (isAdmin$ | async)"
       [loading]="playersLoading$ | async"
       [disabled]="disabled"
+      [forceRequired]="true"
     >
       <input
         bioInput
