--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -4,6 +4,7 @@
   font-size: 0.85rem;
   background-color: v.$primary;
   color: v.$primary-600;
+  position: relative;
   &.card {
     background-color: v.$primary;
     color: v.$primary-600;
