--- a/src/app/player/player-profile/player-profile.component.html
+++ b/src/app/player/player-profile/player-profile.component.html
@@ -102,6 +102,7 @@
         [loading]="state.saving"
         [disabled]="state.editMode && !state.canSave"
         *ngIf="state.editMode"
+        @fadeInOut
       >
         Save
       </button>
