--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,13 @@
 @use 'variables' as v;
+@use 'functions' as f;
 
 :host {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: f.get-z-index(header);
+
   display: flex;
   justify-content: space-between;
   align-items: center;
