- replaced all @import with @use in scss - removed the providedIn from the Interceptors - renamed AdminGuard to AuthAdminGuard - renamed LoggedGuard to AuthLoggedGuard - renamed NotLoggedGuard to AuthNotLoggedGuard - added error handling for 429 (Too many requests) - use the new HttpStatusCode from @angular/common/http - added contact page - fixed typo in the PlayerChangeRequestsModal - fixed type in the ScoreAddComponent - renamed error class from FormFieldErrorComponent from error to form-field-error - fixed hint and error displaying at the same time in the FormFieldComponent - added DialogService.error - added WhiteSpaceValidator - added AuthLoggedGuard to most of the routes - fixed font in the input/textarea - fixed textarea autosize (gambi) - improved the danger color (was too dark before) - updated @stlmpp/* to 6.1.0

--- a/src/app/auth/shared/password-strong/password-strong.component.scss
+++ b/src/app/auth/shared/password-strong/password-strong.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@use 'variables' as v;
 
 :host {
   display: block;
@@ -7,7 +7,7 @@
   position: relative;
   > .bar {
     height: 100%;
-    background: linear-gradient(to right, $danger-200, $accent-200);
+    background: linear-gradient(to right, v.$danger-200, v.$accent-200);
     transition: width 200ms ease;
   }
 }
