--- a/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
@@ -59,7 +59,7 @@
         <errors>
           <error *error="'required'">Max combo is required</error>
           <error *error="'min'">Max combo can't be negative</error>
-          <error *error="'max'">Max combo can surpass 400</error>
+          <error *error="'max'">Max combo can't surpass 400</error>
         </errors>
       </form-field>
       <form-field label="Time">
