--- a/src/app/shared/components/modal/dialog/dialog.component.scss
+++ b/src/app/shared/components/modal/dialog/dialog.component.scss
@@ -4,6 +4,16 @@
   &.success {
     .modal-title {
       color: v.$success;
+    }
+  }
+  &.error {
+    .modal-title {
+      color: v.$danger;
+    }
+  }
+  &.error,
+  &.success {
+    .modal-title {
       display: flex;
       align-items: center;
       .icon {
