--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'theme';
+@use 'variables' as v;
+@use 'theme';
 
 body {
-  background-color: $dark;
+  background-color: v.$dark;
   margin: 0;
   box-sizing: border-box;
 }
@@ -18,13 +19,13 @@ body {
   height: 10px;
 }
 ::-webkit-scrollbar-track {
-  background: $light;
+  background: v.$light;
 }
 ::-webkit-scrollbar-thumb {
-  background: $dark-weak;
+  background: v.$dark-weak;
 }
 
 hr {
   border: 0;
-  border-bottom: 1px solid $primary-200;
+  border-bottom: 1px solid v.$primary-200;
 }
