--- a/src/styles/_overlay.scss
+++ b/src/styles/_overlay.scss
@@ -1,5 +1,7 @@
 @use 'functions' as f;
-@import '~@angular/cdk/overlay-prebuilt.css';
+@use '~@angular/cdk';
+
+@include cdk.overlay();
 
 .cdk-overlay-container {
   z-index: f.get-z-index(overlay);
