--- a/src/app/shared/components/form/form-field.component.scss
+++ b/src/app/shared/components/form/form-field.component.scss
@@ -1,9 +1,8 @@
-@import 'variables';
+@use 'variables' as v;
 
 .form-field {
   display: block;
   > .input-wrapper {
-    // z-index: 1; TODO If anything breaks on the form-field, that because of me
     position: relative;
 
     &.has-prefix {
@@ -74,7 +73,7 @@
       display: flex;
       .hint {
         font-size: 0.65rem;
-        color: $primary-100;
+        color: v.$primary-100;
         display: block;
       }
       > .hint-spacer {
