--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@use 'variables' as v;
 
 .list {
   display: flex;
@@ -12,7 +12,7 @@
   }
   .list-item {
     padding: 0.75rem 0.5rem;
-    border-bottom: 1px solid $primary-400;
+    border-bottom: 1px solid v.$primary-400;
     display: flex;
     outline: none;
     .suffix {
@@ -52,7 +52,7 @@
       &:hover,
       &.selected,
       &:focus {
-        background-color: $primary-50;
+        background-color: v.$primary-50;
       }
     }
   }
