--- a/src/app/shared/components/modal/dialog/dialog.component.html
+++ b/src/app/shared/components/modal/dialog/dialog.component.html
@@ -1,6 +1,7 @@
 <h5 bioModalTitle *ngIf="data.title">
   <icon *ngIf="!(data.type | any: typesWithoutIcon)" [ngSwitch]="data.type">
     <ng-container *ngSwitchCase="dialogType.success">check_circle_outline</ng-container>
+    <ng-container *ngSwitchCase="dialogType.error">highlight_off</ng-container>
   </icon>
   {{ data.title }}
 </h5>
