--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,13 +1,13 @@
-@import 'variables';
-@import 'functions';
-@import 'plugins';
-@import 'mixins';
-@import 'typo';
-@import 'grid';
-@import 'form';
-@import 'progressbar';
-@import 'table';
-@import 'icon';
-@import 'badge';
-@import 'select';
-@import 'overlay';
+@use 'variables';
+@use 'functions';
+@use 'plugins';
+@use 'mixins';
+@use 'typo';
+@use 'grid';
+@use 'form';
+@use 'progressbar';
+@use 'table';
+@use 'icon';
+@use 'badge';
+@use 'select';
+@use 'overlay';
