- minor style fix in the ScoreApprovalActionsModalComponent - added cdkTextareaAutosize to the text areas in the ScoreRequestChangesModalComponent

--- a/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.scss
+++ b/src/app/score/score-shared/score-approval/score-approval-actions-modal/score-approval-actions-modal.component.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   grid-gap: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .title {
