- use the scss variable for mobile-width - fixed home link on the side-menu - added NotFoundComponent (closes #23) - renamed ScoreWorldRecordTableComponent to ScoreWorldRecordsComponent - renamed route /score/world-record/table to /score/world-records - added debounceTime to ParamsComponent outputs

--- a/src/app/auth/auth-steam/steam-register/steam-register.component.scss
+++ b/src/app/auth/auth-steam/steam-register/steam-register.component.scss
@@ -1,8 +1,10 @@
+@use 'variables' as v;
+
 :host {
   display: flex;
   justify-content: center;
   form {
-    max-width: 599px;
+    max-width: v.$mobile-width;
     width: 100%;
   }
 }
