--- a/src/app/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/auth/forgot-password/forgot-password.component.scss
@@ -1,8 +1,10 @@
+@use 'variables' as v;
+
 form {
   display: flex;
   justify-content: center;
   .card {
-    max-width: 599px;
+    max-width: v.$mobile-width;
     width: 100%;
   }
 }
